--- a/solution/plugin_d3d12.vcxproj
+++ b/solution/plugin_d3d12.vcxproj
@@ -98,6 +98,7 @@
     <ClInclude Include="..\plugins\render_d3d12\D3D12_DescriptorSet.h" />
     <ClInclude Include="..\plugins\render_d3d12\D3D12_Device.h" />
     <ClInclude Include="..\plugins\render_d3d12\D3D12_Graphics.h" />
+    <ClInclude Include="..\plugins\render_d3d12\D3D12_InputLayout.h" />
     <ClInclude Include="..\plugins\render_d3d12\D3D12_Mapping.h" />
     <ClInclude Include="..\plugins\render_d3d12\D3D12_Pipeline.h" />
     <ClInclude Include="..\plugins\render_d3d12\D3D12_Plugin.h" />
@@ -111,6 +112,7 @@
     <ClCompile Include="..\plugins\render_d3d12\D3D12_DescriptorSet.cpp" />
     <ClCompile Include="..\plugins\render_d3d12\D3D12_Device.cpp" />
     <ClCompile Include="..\plugins\render_d3d12\D3D12_Graphics.cpp" />
+    <ClCompile Include="..\plugins\render_d3d12\D3D12_InputLayout.cpp" />
     <ClCompile Include="..\plugins\render_d3d12\D3D12_Mapping.cpp" />
     <ClCompile Include="..\plugins\render_d3d12\D3D12_Pipeline.cpp" />
     <ClCompile Include="..\plugins\render_d3d12\D3D12_Plugin.cpp" />
