--- a/solution/plugin_d3d11.vcxproj
+++ b/solution/plugin_d3d11.vcxproj
@@ -103,7 +103,7 @@
     <ClInclude Include="..\plugins\render_d3d11\D3D11_RenderTexture.h" />
     <ClInclude Include="..\plugins\render_d3d11\D3D11_RenderWindow.h" />
     <ClInclude Include="..\plugins\render_d3d11\D3D11_Texture.h" />
-    <ClInclude Include="..\plugins\render_d3d11\D3D11_VertexLayout.h" />
+    <ClInclude Include="..\plugins\render_d3d11\D3D11_InputLayout.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\plugins\render_d3d11\D3D11_Buffer.cpp" />
@@ -117,7 +117,7 @@
     <ClCompile Include="..\plugins\render_d3d11\D3D11_RenderTexture.cpp" />
     <ClCompile Include="..\plugins\render_d3d11\D3D11_RenderWindow.cpp" />
     <ClCompile Include="..\plugins\render_d3d11\D3D11_Texture.cpp" />
-    <ClCompile Include="..\plugins\render_d3d11\D3D11_VertexLayout.cpp" />
+    <ClCompile Include="..\plugins\render_d3d11\D3D11_InputLayout.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
