--- a/solution/plugin_d3d12.vcxproj.filters
+++ b/solution/plugin_d3d12.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClInclude Include="..\plugins\render_d3d12\D3D12_Program.h">
       <Filter>src</Filter>
     </ClInclude>
+    <ClInclude Include="..\plugins\render_d3d12\D3D12_InputLayout.h">
+      <Filter>src</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\plugins\render_d3d12\D3D12_Buffer.cpp">
@@ -75,6 +78,9 @@
       <Filter>src</Filter>
     </ClCompile>
     <ClCompile Include="..\plugins\render_d3d12\D3D12_Program.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="..\plugins\render_d3d12\D3D12_InputLayout.cpp">
       <Filter>src</Filter>
     </ClCompile>
   </ItemGroup>
