--- a/solution/plugin_ogl.vcxproj
+++ b/solution/plugin_ogl.vcxproj
@@ -104,7 +104,7 @@
     <ClInclude Include="..\plugins\render_ogl\OGL_RenderTexture.h" />
     <ClInclude Include="..\plugins\render_ogl\OGL_RenderWindow.h" />
     <ClInclude Include="..\plugins\render_ogl\OGL_Texture.h" />
-    <ClInclude Include="..\plugins\render_ogl\OGL_VertexLayout.h" />
+    <ClInclude Include="..\plugins\render_ogl\OGL_InputLayout.h" />
     <ClInclude Include="..\plugins\render_ogl\glew\include\GL\glew.h" />
     <ClInclude Include="..\plugins\render_ogl\glew\include\GL\glxew.h" />
     <ClInclude Include="..\plugins\render_ogl\glew\include\GL\wglew.h" />
@@ -122,7 +122,7 @@
     <ClCompile Include="..\plugins\render_ogl\OGL_RenderTexture.cpp" />
     <ClCompile Include="..\plugins\render_ogl\OGL_RenderWindow.cpp" />
     <ClCompile Include="..\plugins\render_ogl\OGL_Texture.cpp" />
-    <ClCompile Include="..\plugins\render_ogl\OGL_VertexLayout.cpp" />
+    <ClCompile Include="..\plugins\render_ogl\OGL_InputLayout.cpp" />
     <ClCompile Include="..\plugins\render_ogl\glew\src\glew.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
