--- a/solution/plugin_ogl.vcxproj.filters
+++ b/solution/plugin_ogl.vcxproj.filters
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <Filter Include="glew">
@@ -48,9 +48,6 @@
     <ClInclude Include="..\plugins\render_ogl\OGL_Texture.h">
       <Filter>src</Filter>
     </ClInclude>
-    <ClInclude Include="..\plugins\render_ogl\OGL_VertexLayout.h">
-      <Filter>src</Filter>
-    </ClInclude>
     <ClInclude Include="..\plugins\render_ogl\glew\include\GL\glew.h">
       <Filter>glew</Filter>
     </ClInclude>
@@ -59,6 +56,9 @@
     </ClInclude>
     <ClInclude Include="..\plugins\render_ogl\glew\include\GL\wglew.h">
       <Filter>glew</Filter>
+    </ClInclude>
+    <ClInclude Include="..\plugins\render_ogl\OGL_InputLayout.h">
+      <Filter>src</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -98,11 +98,11 @@
     <ClCompile Include="..\plugins\render_ogl\OGL_Texture.cpp">
       <Filter>src</Filter>
     </ClCompile>
-    <ClCompile Include="..\plugins\render_ogl\OGL_VertexLayout.cpp">
-      <Filter>src</Filter>
-    </ClCompile>
     <ClCompile Include="..\plugins\render_ogl\glew\src\glew.c">
       <Filter>glew</Filter>
+    </ClCompile>
+    <ClCompile Include="..\plugins\render_ogl\OGL_InputLayout.cpp">
+      <Filter>src</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
