--- a/solution/plugin_vulkan.vcxproj
+++ b/solution/plugin_vulkan.vcxproj
@@ -105,6 +105,7 @@
     <ClInclude Include="..\plugins\render_vulkan\VK_Program.h" />
     <ClInclude Include="..\plugins\render_vulkan\VK_Texture.h" />
     <ClInclude Include="..\plugins\render_vulkan\Vk_CommandQueue.h" />
+    <ClInclude Include="..\plugins\render_vulkan\VK_InputLayout.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\plugins\render_vulkan\VK_Buffer.cpp" />
@@ -118,6 +119,7 @@
     <ClCompile Include="..\plugins\render_vulkan\VK_Plugin.cpp" />
     <ClCompile Include="..\plugins\render_vulkan\VK_Program.cpp" />
     <ClCompile Include="..\plugins\render_vulkan\VK_Texture.cpp" />
+    <ClCompile Include="..\plugins\render_vulkan\VK_InputLayout.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
