--- a/solution/plugin_d3d11.vcxproj.filters
+++ b/solution/plugin_d3d11.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClInclude Include="..\plugins\render_d3d11\D3D11_InputLayout.h">
       <Filter>src</Filter>
     </ClInclude>
+    <ClInclude Include="..\plugins\render_d3d11\D3D11_Graphics.h">
+      <Filter>src</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\plugins\render_d3d11\D3D11_Buffer.cpp">
@@ -81,6 +84,9 @@
       <Filter>src</Filter>
     </ClCompile>
     <ClCompile Include="..\plugins\render_d3d11\D3D11_InputLayout.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="..\plugins\render_d3d11\D3D11_Graphics.cpp">
       <Filter>src</Filter>
     </ClCompile>
   </ItemGroup>
