--- a/solution/plugin_d3d12.vcxproj.filters
+++ b/solution/plugin_d3d12.vcxproj.filters
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <Filter Include="src">
@@ -27,6 +27,9 @@
     <ClInclude Include="..\plugins\render_d3d12\D3D12_Graphics.h">
       <Filter>src</Filter>
     </ClInclude>
+    <ClInclude Include="..\plugins\render_d3d12\D3D12_InputLayout.h">
+      <Filter>src</Filter>
+    </ClInclude>
     <ClInclude Include="..\plugins\render_d3d12\D3D12_Mapping.h">
       <Filter>src</Filter>
     </ClInclude>
@@ -36,13 +39,10 @@
     <ClInclude Include="..\plugins\render_d3d12\D3D12_Plugin.h">
       <Filter>src</Filter>
     </ClInclude>
-    <ClInclude Include="..\plugins\render_d3d12\D3D12_Texture.h">
-      <Filter>src</Filter>
-    </ClInclude>
     <ClInclude Include="..\plugins\render_d3d12\D3D12_Program.h">
       <Filter>src</Filter>
     </ClInclude>
-    <ClInclude Include="..\plugins\render_d3d12\D3D12_InputLayout.h">
+    <ClInclude Include="..\plugins\render_d3d12\D3D12_Texture.h">
       <Filter>src</Filter>
     </ClInclude>
   </ItemGroup>
@@ -65,6 +65,9 @@
     <ClCompile Include="..\plugins\render_d3d12\D3D12_Graphics.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="..\plugins\render_d3d12\D3D12_InputLayout.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
     <ClCompile Include="..\plugins\render_d3d12\D3D12_Mapping.cpp">
       <Filter>src</Filter>
     </ClCompile>
@@ -74,13 +77,10 @@
     <ClCompile Include="..\plugins\render_d3d12\D3D12_Plugin.cpp">
       <Filter>src</Filter>
     </ClCompile>
-    <ClCompile Include="..\plugins\render_d3d12\D3D12_Texture.cpp">
-      <Filter>src</Filter>
-    </ClCompile>
     <ClCompile Include="..\plugins\render_d3d12\D3D12_Program.cpp">
       <Filter>src</Filter>
     </ClCompile>
-    <ClCompile Include="..\plugins\render_d3d12\D3D12_InputLayout.cpp">
+    <ClCompile Include="..\plugins\render_d3d12\D3D12_Texture.cpp">
       <Filter>src</Filter>
     </ClCompile>
   </ItemGroup>
