--- a/solution/engine.vcxproj.filters
+++ b/solution/engine.vcxproj.filters
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <Filter Include="core">
@@ -6,6 +6,15 @@
     </Filter>
     <Filter Include="engine">
       <UniqueIdentifier>{FBDB78FB-E77D-A3D1-D038-B725BC792A22}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="engine">
+      <UniqueIdentifier>{FBDB78FB-E77D-A3D1-D038-B725BC792A22}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="engine\include">
+      <UniqueIdentifier>{6ECEB398-5A9C-A79E-4330-18C52F9D8303}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="engine\src">
+      <UniqueIdentifier>{921F4884-7ED7-89D1-E7DE-622DD3B524C2}</UniqueIdentifier>
     </Filter>
     <Filter Include="external">
       <UniqueIdentifier>{2839F3DC-1406-4EE8-3D1F-3C90294B8376}</UniqueIdentifier>
@@ -174,6 +183,9 @@
     <ClInclude Include="..\engine\include\IOServicePool.h">
       <Filter>net</Filter>
     </ClInclude>
+    <ClInclude Include="..\engine\include\KeyedVector.h">
+      <Filter>engine\include</Filter>
+    </ClInclude>
     <ClInclude Include="..\engine\include\Light.h">
       <Filter>render</Filter>
     </ClInclude>
@@ -261,6 +273,9 @@
     <ClInclude Include="..\engine\include\Protocol.h">
       <Filter>net</Filter>
     </ClInclude>
+    <ClInclude Include="..\engine\include\ProxyChannel.h">
+      <Filter>engine\include</Filter>
+    </ClInclude>
     <ClInclude Include="..\engine\include\Quaternion.h">
       <Filter>math</Filter>
     </ClInclude>
@@ -311,6 +326,9 @@
     </ClInclude>
     <ClInclude Include="..\engine\include\SocketChannel.h">
       <Filter>net</Filter>
+    </ClInclude>
+    <ClInclude Include="..\engine\include\SortedVector.h">
+      <Filter>engine\include</Filter>
     </ClInclude>
     <ClInclude Include="..\engine\include\Sphere.h">
       <Filter>math</Filter>
@@ -366,6 +384,9 @@
     <ClInclude Include="..\engine\include\Vector4.h">
       <Filter>math</Filter>
     </ClInclude>
+    <ClInclude Include="..\engine\include\VertexLayout.h">
+      <Filter>graphics</Filter>
+    </ClInclude>
     <ClInclude Include="..\engine\include\View.h">
       <Filter>render</Filter>
     </ClInclude>
@@ -383,15 +404,6 @@
     </ClInclude>
     <ClInclude Include="..\engine\src\xml\pugixml.hpp">
       <Filter>external</Filter>
-    </ClInclude>
-    <ClInclude Include="..\engine\include\SortedVector.h">
-      <Filter>core</Filter>
-    </ClInclude>
-    <ClInclude Include="..\engine\include\KeyedVector.h">
-      <Filter>core</Filter>
-    </ClInclude>
-    <ClInclude Include="..\engine\include\ProxyChannel.h">
-      <Filter>net</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -569,6 +581,9 @@
     <ClCompile Include="..\engine\src\Protocol.cpp">
       <Filter>net</Filter>
     </ClCompile>
+    <ClCompile Include="..\engine\src\ProxyChannel.cpp">
+      <Filter>engine\src</Filter>
+    </ClCompile>
     <ClCompile Include="..\engine\src\Quaternion.cpp">
       <Filter>math</Filter>
     </ClCompile>
@@ -638,6 +653,9 @@
     <ClCompile Include="..\engine\src\Variant.cpp">
       <Filter>core</Filter>
     </ClCompile>
+    <ClCompile Include="..\engine\src\VertexLayout.cpp">
+      <Filter>graphics</Filter>
+    </ClCompile>
     <ClCompile Include="..\engine\src\View.cpp">
       <Filter>render</Filter>
     </ClCompile>
@@ -652,9 +670,6 @@
     </ClCompile>
     <ClCompile Include="..\engine\src\xml\pugixml.cpp">
       <Filter>external</Filter>
-    </ClCompile>
-    <ClCompile Include="..\engine\src\ProxyChannel.cpp">
-      <Filter>net</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
