--- a/solution/plugin_d3d11.vcxproj
+++ b/solution/plugin_d3d11.vcxproj
@@ -74,7 +74,7 @@
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;NDEBUG;CU_D3D11_BUILD;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>..\engine\include;D:\Program Files (x86)\Microsoft DirectX SDK (August 2009)\Include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\engine\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <Optimization>Full</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
@@ -97,29 +97,31 @@
     <ClInclude Include="..\plugins\render_d3d11\D3D11_DescriptorSet.h" />
     <ClInclude Include="..\plugins\render_d3d11\D3D11_Device.h" />
     <ClInclude Include="..\plugins\render_d3d11\D3D11_Graphics.h" />
+    <ClInclude Include="..\plugins\render_d3d11\D3D11_InputLayout.h" />
     <ClInclude Include="..\plugins\render_d3d11\D3D11_Mapping.h" />
     <ClInclude Include="..\plugins\render_d3d11\D3D11_Pipeline.h" />
     <ClInclude Include="..\plugins\render_d3d11\D3D11_Plugin.h" />
     <ClInclude Include="..\plugins\render_d3d11\D3D11_Program.h" />
+    <ClInclude Include="..\plugins\render_d3d11\D3D11_RenderState.h" />
     <ClInclude Include="..\plugins\render_d3d11\D3D11_RenderTexture.h" />
     <ClInclude Include="..\plugins\render_d3d11\D3D11_RenderWindow.h" />
     <ClInclude Include="..\plugins\render_d3d11\D3D11_Texture.h" />
-    <ClInclude Include="..\plugins\render_d3d11\D3D11_InputLayout.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\plugins\render_d3d11\D3D11_Graphics.cpp" />
     <ClCompile Include="..\plugins\render_d3d11\D3D11_Buffer.cpp" />
     <ClCompile Include="..\plugins\render_d3d11\D3D11_CommandBuffer.cpp" />
     <ClCompile Include="..\plugins\render_d3d11\D3D11_DescriptorSet.cpp" />
     <ClCompile Include="..\plugins\render_d3d11\D3D11_Device.cpp" />
+    <ClCompile Include="..\plugins\render_d3d11\D3D11_Graphics.cpp" />
+    <ClCompile Include="..\plugins\render_d3d11\D3D11_InputLayout.cpp" />
     <ClCompile Include="..\plugins\render_d3d11\D3D11_Mapping.cpp" />
     <ClCompile Include="..\plugins\render_d3d11\D3D11_Pipeline.cpp" />
     <ClCompile Include="..\plugins\render_d3d11\D3D11_Plugin.cpp" />
     <ClCompile Include="..\plugins\render_d3d11\D3D11_Program.cpp" />
+    <ClCompile Include="..\plugins\render_d3d11\D3D11_RenderState.cpp" />
     <ClCompile Include="..\plugins\render_d3d11\D3D11_RenderTexture.cpp" />
     <ClCompile Include="..\plugins\render_d3d11\D3D11_RenderWindow.cpp" />
     <ClCompile Include="..\plugins\render_d3d11\D3D11_Texture.cpp" />
-    <ClCompile Include="..\plugins\render_d3d11\D3D11_InputLayout.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
