--- a/solution/plugin_d3d11.vcxproj.filters
+++ b/solution/plugin_d3d11.vcxproj.filters
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <Filter Include="src">
@@ -21,6 +21,12 @@
     <ClInclude Include="..\plugins\render_d3d11\D3D11_Device.h">
       <Filter>src</Filter>
     </ClInclude>
+    <ClInclude Include="..\plugins\render_d3d11\D3D11_Graphics.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\plugins\render_d3d11\D3D11_InputLayout.h">
+      <Filter>src</Filter>
+    </ClInclude>
     <ClInclude Include="..\plugins\render_d3d11\D3D11_Mapping.h">
       <Filter>src</Filter>
     </ClInclude>
@@ -33,6 +39,9 @@
     <ClInclude Include="..\plugins\render_d3d11\D3D11_Program.h">
       <Filter>src</Filter>
     </ClInclude>
+    <ClInclude Include="..\plugins\render_d3d11\D3D11_RenderState.h">
+      <Filter>src</Filter>
+    </ClInclude>
     <ClInclude Include="..\plugins\render_d3d11\D3D11_RenderTexture.h">
       <Filter>src</Filter>
     </ClInclude>
@@ -40,12 +49,6 @@
       <Filter>src</Filter>
     </ClInclude>
     <ClInclude Include="..\plugins\render_d3d11\D3D11_Texture.h">
-      <Filter>src</Filter>
-    </ClInclude>
-    <ClInclude Include="..\plugins\render_d3d11\D3D11_InputLayout.h">
-      <Filter>src</Filter>
-    </ClInclude>
-    <ClInclude Include="..\plugins\render_d3d11\D3D11_Graphics.h">
       <Filter>src</Filter>
     </ClInclude>
   </ItemGroup>
@@ -62,6 +65,12 @@
     <ClCompile Include="..\plugins\render_d3d11\D3D11_Device.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="..\plugins\render_d3d11\D3D11_Graphics.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="..\plugins\render_d3d11\D3D11_InputLayout.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
     <ClCompile Include="..\plugins\render_d3d11\D3D11_Mapping.cpp">
       <Filter>src</Filter>
     </ClCompile>
@@ -74,6 +83,9 @@
     <ClCompile Include="..\plugins\render_d3d11\D3D11_Program.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="..\plugins\render_d3d11\D3D11_RenderState.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
     <ClCompile Include="..\plugins\render_d3d11\D3D11_RenderTexture.cpp">
       <Filter>src</Filter>
     </ClCompile>
@@ -81,12 +93,6 @@
       <Filter>src</Filter>
     </ClCompile>
     <ClCompile Include="..\plugins\render_d3d11\D3D11_Texture.cpp">
-      <Filter>src</Filter>
-    </ClCompile>
-    <ClCompile Include="..\plugins\render_d3d11\D3D11_InputLayout.cpp">
-      <Filter>src</Filter>
-    </ClCompile>
-    <ClCompile Include="..\plugins\render_d3d11\D3D11_Graphics.cpp">
       <Filter>src</Filter>
     </ClCompile>
   </ItemGroup>
