--- a/solution/plugin_ogl.vcxproj.filters
+++ b/solution/plugin_ogl.vcxproj.filters
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <Filter Include="glew">
@@ -25,6 +25,9 @@
       <Filter>src</Filter>
     </ClInclude>
     <ClInclude Include="..\plugins\render_ogl\OGL_FrameBuffer.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\plugins\render_ogl\OGL_InputLayout.h">
       <Filter>src</Filter>
     </ClInclude>
     <ClInclude Include="..\plugins\render_ogl\OGL_Mapping.h">
@@ -57,9 +60,6 @@
     <ClInclude Include="..\plugins\render_ogl\glew\include\GL\wglew.h">
       <Filter>glew</Filter>
     </ClInclude>
-    <ClInclude Include="..\plugins\render_ogl\OGL_InputLayout.h">
-      <Filter>src</Filter>
-    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\plugins\render_ogl\OGL_Buffer.cpp">
@@ -75,6 +75,9 @@
       <Filter>src</Filter>
     </ClCompile>
     <ClCompile Include="..\plugins\render_ogl\OGL_FrameBuffer.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="..\plugins\render_ogl\OGL_InputLayout.cpp">
       <Filter>src</Filter>
     </ClCompile>
     <ClCompile Include="..\plugins\render_ogl\OGL_Mapping.cpp">
@@ -100,9 +103,6 @@
     </ClCompile>
     <ClCompile Include="..\plugins\render_ogl\glew\src\glew.c">
       <Filter>glew</Filter>
-    </ClCompile>
-    <ClCompile Include="..\plugins\render_ogl\OGL_InputLayout.cpp">
-      <Filter>src</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
